DRAWER: Fixed default overflow

--- a/core/components/drawer/Drawer.scss
+++ b/core/components/drawer/Drawer.scss
@@ -20,7 +20,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    overflow-y: auto;
+    // overflow-y: auto;
     margin: 0 !important ;
     max-width: 100vw !important;
     &::-webkit-scrollbar {
@@ -106,7 +106,7 @@
   &.--absolute {
     position: absolute;
   }
-  &.--no_backdrop {
+  &.--no-backdrop {
     pointer-events: none;
   }
   .wrapper__backdrop {
